<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Home">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="20dp"
            android:layout_height="0dp" />

        <Button
            android:id="@+id/home_calender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calendar" />

        <View
            android:layout_width="20dp"
            android:layout_height="0dp" />

        <Button
            android:id="@+id/home_selfCare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/self_care" />

        <View
            android:layout_width="20dp"
            android:layout_height="0dp" />

        <Button
            android:id="@+id/home_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting" />

    </androidx.appcompat.widget.LinearLayoutCompat>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_gravity="center"
        android:background="@drawable/round_background"
        android:orientation="vertical"
        android:padding="40dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ovulation"
            android:textColor="@color/colorSecondary"
            android:textSize="30sp" />


        <TextView
            android:id="@+id/home_ovulationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/days_left"
            android:textColor="@color/purple_200"
            android:textSize="20sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/period"
            android:textColor="@color/colorSecondary"
            android:textSize="30sp" />


        <TextView
            android:id="@+id/home_periodTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/days_left"
            android:textColor="@color/purple_200"
            android:textSize="20sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:layout_width="0dp"
        android:layout_height="25dp" />

    <View
        android:layout_width="380dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:background="@color/colorSecondary" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/my_cycles"
                android:textColor="@color/colorSecondary"
                android:textSize="25sp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="Start Dates"
                    android:textColor="@color/colorSecondary"
                    android:textSize="25sp" />

                <View
                    android:layout_width="100dp"
                    android:layout_height="0dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="End Dates"
                    android:textColor="@color/colorSecondary"
                    android:textSize="25sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/home_recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </LinearLayout>


    </ScrollView>
</LinearLayout>

