<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".Login">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_emailID_Text_Input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:endIconMode="clear_text"
        app:endIconTint="@color/purple_200"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:startIconTint="@color/purple_200">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_emailID_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_email_id"
            android:inputType="textEmailAddress"
            android:textColor="@color/purple_200"
            android:textColorHint="@color/purple_200"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="10dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_password_Text_Input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:endIconMode="clear_text"
        app:endIconTint="@color/purple_200"
        app:startIconDrawable="@drawable/ic_baseline_lock_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password_EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:textColorHint="@color/purple_200"
            android:textSize="15sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="10dp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Login_Login_outlinedButton"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="15sp" />

        <View
            android:layout_width="10dp"
            android:layout_height="0dp"/>

        <Button
            android:id="@+id/Login_Register_outlinedButton"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="15sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</LinearLayout>